--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,6 @@
- <div class="jumbotron">
+ <%- include('../partials/header') %>
+ 
+       <div class="jumbotron">
           <h1 class="display-3">Hello, world!</h1>
           <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
           <hr class="my-4">
@@ -19,4 +21,6 @@
       <p>Clever content goes here</p>    
       <p>Clever content goes here</p>    
       <p>Clever content goes here</p>    
-      <p>Clever content goes here</p>        
+      <p>Clever content goes here</p>       
+      
+ <%- include('../partials/footer') %>
